# recess

./: .gitignore  .tool-versions  README.md  mix.exs
elixir/: .gitignore  .tool-versions  mix.exs
elixir/lib/: algorithm.ex  period.ex  recess.ex  run.exs
elixir/native/algorithm/: Cargo.toml  README.md
elixir/native/algorithm/src/: lib.rs
elixir/native/genetic_algorithm/: Cargo.toml
elixir/native/genetic_algorithm/src/: lib.rs
elixir/test/: recess_test.exs
lib/: adult.ex  dates.ex  genetic_algorithm.ex  period.ex  run.exs
native/genetic_algorithm/: Cargo.toml  README.md
native/genetic_algorithm/src/: adult.rs  lib.rs  recess_algorithm.rs  recess_config.rs  recess_fitness.rs  serde_naive_date.rs  serde_naive_dates.rs
ruby/: .gitignore  .tool-versions  Gemfile  LICENSE.txt  README.md  Rakefile  recess.gemspec
ruby/exe/: recess
ruby/lib/: recess.rb
ruby/lib/recess/: algorithm.rb  c_string.rb  version.rb
ruby/native/algorithm/: Cargo.toml
ruby/native/algorithm/src/: lib.rs
ruby/native/c_string/: Cargo.toml
ruby/native/c_string/src/: lib.rs
ruby/sig/: recess.rbs
ruby/spec/: recess_spec.rb  spec_helper.rb
rust/recess_algorithm/: Cargo.toml
rust/recess_algorithm/src/: config.rs  fitness.rs  lib.rs  prelude.rs  recess_algorithm.rs  recess_config.rs
