[package]
name = "genetic_algorithm"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "genetic_algorithm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
