[package]
name = "genetic_algorithm"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "genetic_algorithm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rustler = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.22"
genetic_algorithm = "0.5.1"
statrs = "0.16.0"
itertools = "0.10.4"
