[package]
name = "genetic_algorithm"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "genetic_algorithm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
recess_algorithm = { path = "../../../rust/recess_algorithm" }
log = "0.4.0"
env_logger = "0.9.1"

#rand = { version = "0.8.5", features = ["small_rng"] }
#chrono = "0.4.22"
#genetic_algorithm = "0.6.0"
#statrs = "0.16.0"
itertools = "0.10.4"
